First 4 iterations completed

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,6 @@
-<div>
+<div class="divMainPage">
+  <img height='160;' class="beerMainPage" src='/images/beer.png' alt='beer-image' />
 
+  <a href='/beers'>Check The Beers!</a>
+  <a href='/random-beer'>Check a Random Beer!</a>
 </div>
