--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1,7 +1,26 @@
-/*
-white: #f7f9f9;
-light-blue: #2081c3;
-dark-blue: #0a2c42;
-grey: #bfbfbf;
-font-family: Arial, Helvetica, sans-serif;
-*/
+*{
+
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+nav {
+  width: 100%;
+  padding: 1em 0;
+  display: inline-block;
+  background-color: #2081c3;;
+}
+
+nav a {
+  color: #f7f9f9;
+}
+.divMainPage{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.beerMainPage{
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  margin-top: 50;
+}
